Setting up Heroku Deployments

--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,17 @@
     },
     "scripts": {
         "generate-salts": [
-            "echo '<?php' > salt.php && curl -L https://api.wordpress.org/secret-key/1.1/salt/ >> salt.php"
+            "echo '<?php' > salt.php && curl -sSL https://api.wordpress.org/secret-key/1.1/salt/ >> salt.php"
         ],
         "post-create-project-cmd": [
             "composer run generate-salts",
             "wp plugin activate --all"
         ],
         "compile": [
-            "php bin/populate-config-from-env.php"
+            "php bin/populate-config-from-env.php",
+            "wp plugin activate timber-library",
+            "wp theme activate timber-starter-theme",
+            "composer run generate-salts"
         ]
     }
 }
