Adjusting commands in composer and readme

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,9 @@
         }
     },
     "scripts": {
+        "local": [
+            "cp local-config.php.dist local-config.php"
+        ],
         "compile": [
             "php bin/populate-config-from-env.php",
             "php bin/generate-salts.php",
