--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,4 +3,5 @@ parameters:
     db_user:     root
     db_password: root
     db_host:     localhost
-    heroku:      false
+    env:         dev | prod | heroku
+    debug:       true
