Adjusting heroku parameters

--- a/composer.json
+++ b/composer.json
@@ -34,13 +34,7 @@
             ]
         },
         "incenteev-parameters": {
-            "file": "app/config/parameters.yml",
-            "env-map": {
-                "database_name": "SYMFONY__DATABASE_NAME",
-                "database_user": "SYMFONY__DATABASE_USER",
-                "database_host": "SYMFONY__DATABASE_HOST",
-                "database_password": "SYMFONY__DATABASE_PASSWORD"
-            }
+            "file": "app/config/parameters.yml"
         }
     },
     "scripts": {
