Simplifying the project and updating the readme. Adding deploy to heroku button.

--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
         }
     },
     "addons": [
-        "cleardb"
+        "cleardb",
+        {
+            "plan": "ignite"
+        }
     ]
 }
