Adjusting app.json

--- a/app.json
+++ b/app.json
@@ -8,9 +8,6 @@
         }
     },
     "addons": [
-        "cleardb",
-        {
-            "plan": "ignite"
-        }
+        "cleardb:ignite"
     ]
 }
