--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "designyourcode/wp-install",
     "description": "Install WordPress with Composer.",
+    "license": "MIT",
     "repositories": [
         {
             "type": "composer",
