--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,15 @@
         "php": ">=5.4",
         "ext-gd": "*",
         "composer/installers": "@stable",
-        "johnpbloch/wordpress": "@stable",
-        "incenteev/composer-parameter-handler": "~2.0",
         "mustangostang/spyc": "dev-master",
-        "wpackagist-plugin/amazon-web-services": "@stable",
-        "wpackagist-plugin/amazon-s3-and-cloudfront": "@stable",
-        "upstatement/timber-starter-theme": "dev-master"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "johnpbloch/wordpress": "@stable",
+        "upstatement/timber-starter-theme": "dev-master",
+
+        "wpackagist-plugin/clear-cache-for-timber": "dev-trunk",
+        "wpackagist-plugin/amazon-s3-and-cloudfront": "dev-trunk",
+        "wpackagist-plugin/wordpress-importer": "dev-trunk",
+        "wpackagist-plugin/akismet": "dev-trunk"
     },
     "require-dev": {
         "heroku/heroku-buildpack-php": "*"
