--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "mustangostang/spyc": "dev-master",
         "incenteev/composer-parameter-handler": "~2.0",
         "johnpbloch/wordpress": "@stable",
-        "upstatement/timber-starter-theme": "dev-master",
 
+        "wpackagist-plugin/timber-library": "dev-trunk",
         "wpackagist-plugin/clear-cache-for-timber": "dev-trunk",
         "wpackagist-plugin/amazon-s3-and-cloudfront": "dev-trunk",
         "wpackagist-plugin/wordpress-importer": "dev-trunk",
