--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "johnpbloch/wordpress": "@stable",
 
+        "wpackagist-theme/twentysixteen": "1.2",
         "wpackagist-plugin/timber-library": "dev-trunk",
         "wpackagist-plugin/clear-cache-for-timber": "dev-trunk",
         "wpackagist-plugin/amazon-s3-and-cloudfront": "dev-trunk",
