Adding package to stop wordpress nagging

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "wpackagist-plugin/amazon-s3-and-cloudfront": "dev-trunk",
         "wpackagist-plugin/amazon-web-services": "dev-trunk",
         "wpackagist-plugin/wordpress-importer": "dev-trunk",
-        "wpackagist-plugin/akismet": "dev-trunk"
+        "wpackagist-plugin/akismet": "dev-trunk",
+        "wpackagist-plugin/disable-wordpress-updates": "dev-trunk"
     },
     "require-dev": {
         "heroku/heroku-buildpack-php": "*"
