--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": ">=5.4",
         "ext-gd": "*",
+        "ext-redis": "*",
         "composer/installers": "@stable",
         "mustangostang/spyc": "dev-master",
         "incenteev/composer-parameter-handler": "~2.0",
