Enabling php redis

--- a/.user.ini
+++ b/.user.ini
@@ -1,2 +1,4 @@
 upload_max_filesize = 100M
 post_max_size = 100M
+session.save_handler = redis
+session.save_path = "tcp://%%REDIS_HOST%%?auth=%%REDIS_PASS%%"
